# RapidRAW

src-tauri/: Cargo.toml
src-tauri/src/: ai_processing.rs
