[package]
name = "RapidRAW"
description = "A blazingly-fast, non-destructive, and GPU-accelerated RAW image editor built with performance in mind."
authors = ["Timon Käch"]
edition = "2024"
rust-version = "1.94"

[lib]
name = "rapidraw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "2.10", features = [ "macos-private-api", "rustls-tls" ] }
tauri-plugin-dialog = "2.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.9"
base64 = "0.22"
tauri-plugin-fs = "2.4.5"
rayon = "1.11.0"
blake3 = "1.8.3"
wgpu = "28.0"
pollster = "0.4"
bytemuck = { version = "1.25", features = ["derive"] }
anyhow = "1.0.102"
kamadak-exif = "0.6.1"
rawler = { git = "https://github.com/CyberTimon/RapidRAW-DngLab.git" }
serde_bytes = "0.11.19"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.22", features = ["v4", "serde"] }
walkdir = "2.5.0"
imageproc = "0.26.1"
ort = { version = "=2.0.0-rc.10", features = ["ndarray", "load-dynamic"] }
ndarray = "0.16"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
tauri-plugin-process = "2.3.1"
tauri-plugin-os = "2.3.2"
os_info = "3"
log = "0.4"
fern = "0.7"
little_exif = "0.6.23"
chrono = "0.4"
tokenizers = "0.22.2"
once_cell = "1.21"
futures = "0.3.32"
sha2 = "0.10"
nalgebra = "0.34.1"
rand = "0.10"
tauri-plugin-shell = "2.3.5"
tempfile = "3.26.0"
num_cpus = "1.17.0"
mimalloc = "0.1.48"
image_hasher = "3.1.1"
regex = "1.12.3"
memmap2 = "0.9.10"
half = { version = "2.7.1", features = ["bytemuck"] }
glam = "0.32.1"
quick-xml = { version = "0.39", features = ["serialize"] }
fuzzy-matcher = "0.3.7"
image-hdr = { version = "0.6.0", default-features = false }
mozjpeg-rs = "0.9.0"
webp = "0.3"
jxl-oxide = { version = "0.12.5", features = ["image"] }
jxl-encoder = "0.1.3"
filetime = "0.2"
libc = "0.2.183"
rgb = "0.8.53"
imgref = "1.12.0"

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
trash = "5.2.5"
tauri-plugin-single-instance = "2.4.0"
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "rustls"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1"
jni = "0.21"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls-webpki-roots"] }
include_dir = "0.7.3"
ort = { version = "2.0.0-rc.10", features = ["nnapi"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"
webkit2gtk = "=2.0.2"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }
sha2 = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
hex = "0.4"

[profile.dev]
opt-level = 2
debug = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
strip = true
